[project]
name = "leaf-poc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.2.0",
    "langchain-huggingface>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "sentence-transformers>=5.1.2",
    "torch>=2.9.1",
    "unstructured>=0.18.21",
    "psutil>=5.9.8",
]
